--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@biomejs/biome": "^1.9.4",
     "next": "15.3.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
