--- a/biome.json
+++ b/biome.json
@@ -1,29 +1,28 @@
 {
-    "$schema": "https://biomejs.dev/schemas/1.5.3/schema.json",
-    "organizeImports": {
-      "enabled": true
-    },
-    "linter": {
-      "enabled": true,
-      "rules": {
-        "recommended": true
-      }
-    },
+  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+  "organizeImports": {
+    "enabled": true
+  },
+  "linter": {
+    "enabled": true,
+    "rules": {
+      "recommended": true
+    }
+  },
+  "formatter": {
+    "enabled": true,
+    "formatWithErrors": false,
+    "indentStyle": "space",
+    "indentWidth": 2,
+    "lineWidth": 120,
+    "lineEnding": "lf",
+    "ignore": []
+  },
+  "javascript": {
     "formatter": {
-      "enabled": true,
-      "formatWithErrors": false,
-      "indentStyle": "space",
-      "indentWidth": 2,
-      "lineWidth": 120,
-      "lineEnding": "lf",
-      "ignore": []
-    },
-    "javascript": {
-      "formatter": {
-        "quoteStyle": "double",
-        "trailingComma": "es5",
-        "semicolons": "always"
-      }
+      "quoteStyle": "double",
+      "trailingCommas": "es5",
+      "semicolons": "always"
     }
   }
-  
+}
