--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "dev": "next dev --turbopack --port 3040",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky"
   },
   "dependencies": {
     "@biomejs/biome": "^1.9.4",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.1",
     "next": "15.3.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
@@ -25,5 +28,8 @@
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "lint-staged": {
+    "*.{js,ts,jsx,tsx,json,jsonc}": ["biome check --write --no-errors-on-unmatched"]
   }
 }
